# Volkolak

./: .clang-format  CMakeLists.txt  README.md
cmake/: clang_format.cmake  libraries.cmake
examples/: CMakeLists.txt  example.cpp  mask.h  using.h  vulkan_enums.h  vulkan_structures.h
volkolak/: parser.cpp  parser.h  templates.h  tools.cpp  tools.h  volkolak.cpp
